<resources>
    <string name="app_name">seokEE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_start">Start</string>
    <string name="str_stop">Stop</string>
    <string name="loading">Loading...</string>
    <string name="enter_room">방 들어가기</string>
    <string name="make_room">방 만들기</string>
    <string name="input_pincode">회의방의 입장코드를 입력하세요.</string>
    <string name="pincode">입장 코드</string>
    <string name="enter">입장</string>
    <string name="input_nickname">닉네임을 입력하세요.</string>
    <string name="nickname">닉네임</string>
    <string name="input">확인</string>
    <string name="login">로그인</string>
    <string name="anonymous">익명입장</string>
    <string name="content">회의 내용</string>
    <string name="users">참여자 목록</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="remember_login">Remember login</string>
    <string name="log_in">Log in</string>
    <string name="id">id</string>
    <string name="my_page">my page</string>
    <string name="ID_text">ID</string>
    <string name="user_name">이름</string>
    <string name="nickname_text">닉네임</string>
    <string name="history">과거 기록</string>
    <string name="exit">나가기</string>
    <string name="button">Button</string>
    <string name="hi">-</string>
    <string name="no">NO.</string>
    <string name="make">파일받기</string>
    <string name="word_cloud">word_cloud</string>
    <string name="result">result</string>
    <string name="detail">세부사항</string>
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_reid">로그인 상태 유지</string>
    <string name="login_join">회원가입</string>
    <string name="login_copy">Copyright ⓒ seokEE. All rights reserved.</string>
    <string name="StringValue">이미지가 열리지 않습니다.</string>
    <string name="an_tb">닉네임 입력</string>
    <string name="an_nick">닉네임</string>
    <string name="an_snick">사용할 닉네임을 입력해 주세요.</string>
    <string name="er_1">회원방의 참여 코드를 입력해 주세요.</string>
    <string name="er_tb">참여 코드 입력</string>
    <string name="er_2">참여코드</string>
    <string name="jo_1">회원가입</string>
    <string name="jo_2">중복확인</string>
    <string name="jo_3">성별</string>
    <string name="jo_4">남자</string>
    <string name="jo_5">여자</string>
    <string name="jo_6">생년월일</string>
    <string name="jo_7">년</string>
    <string name="jo_8">월</string>
    <string name="jo_9">일</string>
    <string name="my_tb">마이페이지</string>
    <string name="en_tb">활동 선택</string>
    <string name="main_part">참여자 목록</string>
    <string name="result_tb">결과</string>
    <string name="result_page">회의결과</string>
    <string name="result_wc">Word Cloud</string>
    <string name="keyword">키워드</string>
    <string name="contribution">기여도</string>
    <string name="textview">TextView</string>
    <string name="forUser">MY PAGE(회원 전용)</string>
    <string name="custom_allow_1_head">권한이 필요합니다.</string>
    <string name="custom_allow_1_body_1">이 기능을 사용하기 위해서는 권한이 필요합니다.\n계속하시겠습니까?</string>
    <string name="custom_exit_head">custom_title</string>
    <string name="custom_exit_body">custom_content</string>

</resources>
