<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:baselineAligned="false"
    android:orientation="vertical">


    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal|top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-40dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/borer_black_bottom"
            android:fontFamily="@font/nanumbarungothicbold"
            android:gravity="center"
            android:text="@string/jo_1"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="0dp">


            <EditText
                android:id="@+id/idInput"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/edit_border_black"
                android:ems="10"
                android:fontFamily="@font/nanumbarungothic"
                android:hint="@string/login_id"
                android:inputType="textPersonName"

                android:padding="5dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/okbt"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"

                android:background="@drawable/bt_radius_w"
                android:fontFamily="@font/nanumbarungothic"
                android:onClick="bt_ok"
                android:padding="8dp"
                android:text="@string/jo_2"
                android:textAlignment="center"
                android:textColor="#3FACDC"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="250dp"
                tools:layout_editor_absoluteY="157dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-40dp"
            tools:layout_editor_absoluteY="0dp">


            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"

                android:layout_margin="5dp"
                android:background="@drawable/edit_border_black"
                android:ems="10"
                android:fontFamily="@font/nanumbarungothic"
                android:hint="@string/login_pw"
                android:inputType="textPersonName|textPassword"
                android:padding="5dp"
                android:textColor="#747474"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="219dp" />

            <EditText
                android:id="@+id/nickInput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/edit_border_black"
                android:ems="10"

                android:fontFamily="@font/nanumbarungothic"
                android:hint="@string/an_nick"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="#747474"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="277dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-40dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/nanumbarungothic"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="성별"
                android:textAlignment="textStart"
                android:textColor="#5D5D5D"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="343dp" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="210dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"

                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="343dp">

                <RadioButton
                    android:id="@+id/genderMen"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanumbarungothic"
                    android:gravity="center"
                    android:text="남자"
                    android:textColor="#747474"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/genderWomen"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanumbarungothic"
                    android:gravity="center"
                    android:text="여자"
                    android:textColor="#747474"
                    android:textSize="16sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-40dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/birthYear"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:dropDownWidth="100dp"
                    android:fontFamily="@font/nanumbarungothic"
                    android:textColor="#747474"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="101dp"
                    tools:layout_editor_absoluteY="409dp" />

                <Spinner
                    android:id="@+id/birthMonth"
                    android:layout_width="90dp"
                    android:layout_height="50dp"

                    android:dropDownWidth="65dp"
                    android:fontFamily="@font/nanumbarungothic"
                    android:textColor="#747474"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="201dp"
                    tools:layout_editor_absoluteY="409dp" />

                <Spinner
                    android:id="@+id/birthDay"

                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:dropDownWidth="65dp"
                    android:fontFamily="@font/nanumbarungothic"
                    android:textColor="#747474"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="265dp"
                    tools:layout_editor_absoluteY="409dp" />
            </LinearLayout>


        </LinearLayout>

    <Button
        android:id="@+id/join_joinButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:background="@drawable/bt_raidus"
        android:clickable="true"
        android:fontFamily="@font/nanumbarungothicbold"
        android:layout_marginTop="30dp"
        android:onClick="bt_join"
        android:text="@string/jo_1"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="487dp" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>